Aress7/src/objects/Case_Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Equipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Location__c</fullName>
        <label>Equipment Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Collection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Order_Ref__c</fullName>
        <label>Equipment Order Ref</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Status__c</fullName>
        <label>Equipment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipName>Case_Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receipt_Reference__c</fullName>
        <label>Receipt Reference</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spend_Category__c</fullName>
        <label>Spend Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Car Hire</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Installers - Equipment Hire</fullName>
                </value>
                <value>
                    <fullName>Installers - Materials for Installation</fullName>
                </value>
                <value>
                    <fullName>Installers - Tools and Equipment</fullName>
                </value>
                <value>
                    <fullName>Postage and Carriage</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Vehicle Costs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spend_Date__c</fullName>
        <label>Spend Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spend_Description__c</fullName>
        <inlineHelpText>Brief description of items purchased</inlineHelpText>
        <label>Spend Description</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spend_Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spend_VAT__c</fullName>
        <label>VAT</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Other__c</fullName>
        <label>Vendor (Other)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CEF</fullName>
                </value>
                <value>
                    <fullName>Cable Co.</fullName>
                </value>
                <value>
                    <fullName>HSS</fullName>
                </value>
                <value>
                    <fullName>Screwfix</fullName>
                </value>
                <value>
                    <fullName>Speedy Hire</fullName>
                </value>
                <value>
                    <fullName>Travis Perkins</fullName>
                </value>
                <value>
                    <fullName>Other - Please Specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cost Tracking Items</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Case Equipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Tracking Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>